# apps/backend/src/lib/infrastructure/db/users/index.ts
@@ -11,6 +11,7 @@ export const users = pgTable('users', {
   osuId: integer('osu_id').notNull().unique(),
   osuUsername: text('osu_username').notNull(),
   countryCode: text('country_code'),
+  osuCoverUrl: text('osu_cover_url'),
   defaultMode: text('default_mode')
     .$type<TournamentMode>()
     .notNull()
